# Sound-localizaiton

./: .gitignore  LICENSE  README.md
src/Lscan/: README.md  (+3 more)
src/tas2-simulator/: CMakeLists.txt  README.md  package.xml
src/tas2-simulator/config/: collision_m_params.yaml  ekf.yaml  nav2_params.yaml  nav2_params6.yaml  nav2_params7.yaml  nav2_params9.yaml  navigation.yaml
src/tas2-simulator/launch/: Bringup.py  collisionM.py  gazeboBringupTAScar.py  navigationTAScar.py  navigationTAScar2.py  navloc.py  navloc2.py  navloc3.py  teleop_twist_keyboard.py  visualizeTAScar.py
src/tas2-simulator/maps/: LSR_N5_TASlab.yaml  LSR_N5_basement.pgm  initial_map.pgm  initial_map.yaml
src/tas2-simulator/models/gazeboModels/basement/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/box/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/box/meshes/: box.dae
src/tas2-simulator/models/gazeboModels/cabinet/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/cabinet/meshes/: cabinet.dae
src/tas2-simulator/models/gazeboModels/chair/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/chair/meshes/: chair.dae
src/tas2-simulator/models/gazeboModels/door/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/door/meshes/: door.dae
src/tas2-simulator/models/gazeboModels/doorxl/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/doorxl/meshes/: doorxl.dae
src/tas2-simulator/models/gazeboModels/keyboard/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/keyboard/meshes/: keyboard.dae
src/tas2-simulator/models/gazeboModels/monitor/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/monitor/meshes/: monitor.dae
src/tas2-simulator/models/gazeboModels/my_ground_plane/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/office_table/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/office_table/meshes/: office_table.dae
src/tas2-simulator/models/gazeboModels/pc/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/person_walking/: model.sdf
src/tas2-simulator/models/gazeboModels/stairs/: model.config  model.sdf
src/tas2-simulator/models/gazeboModels/workbench/: model.config  model.sdf
src/tas2-simulator/models/materials/: tas_blue.material
src/tas2-simulator/models/meshes/: model_wheel_left_collision.dae  model_wheel_right.dae  model_wheel_right_collision.dae
src/tas2-simulator/models/urdf/: tas_car.config  tas_car.sdf  tas_car.urdf  tas_car_v2.sdf  tas_car_v2.urdf
src/tas2-simulator/models/worlds/: basement.world  basement_ext.world  basement_gr6.world
src/tas2-simulator/rviz/: navigationTAScar.rviz  visualizeTAScar.rviz
(+43 files in other folders)
