<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!-- =================================================================================== 
     Description: package file for TAS2 simulator.
     Author: Salman Bari
     Date: Sep 5, 2022                             
     =================================================================================== -->

<package format="3">
  <name>tas2-simulator</name>
  <version>0.0.1</version>
  <description>tas2 simulator package based on Nav2</description>
  <maintainer email="salmanbari03@gmail.com">user</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
  
  
</package>
